# jank-bot

./: Cargo.toml
src/: config.rs  main.rs  utils.rs
src/commands/: general.rs  music.rs
